<resources>
    <string name="app_name">DOT</string>

    <!-- Login Activity / Strings -->
    <string name="landing_welcome_text">Welcome!</string>
    <string name="landing_text">To get started, you\'ll need to Authorize with Bungie.\nClick below to get started!</string>
    <string name="button_authorize_text">Authorize</string>

    <string name="popup_login_progress_title">Logging You In…</string>
    <string name="popup_login_progress_text">Logging in with Bungie. This should only take a moment!</string>
    <string name="popup_login_failed_title">Login Failed</string>
    <string name="popup_login_failed_text">We were unable to authenticate you with Bungie for some reason. Give it another go!</string>

    <string name="popup_manifest_update_check_title">Checking for updates</string>
    <string name="popup_manifest_update_check">Checking with Bungie to see if you have the latest copy of the Destiny 2 game database…</string>
    <string name="popup_manifest_downloading_title">Database update in progress…</string>
    <string name="popup_manifest_downloading">Downloading the latest game database from Bungie. This might take a moment… (Progress: %p%)</string>
    <string name="popup_manifest_download_failure_title">Database download failure!</string>
    <string name="popup_manifest_download_failure">Sorry, we were unable to download the latest game database from Bungie. The following error was presented: %e</string>

    <string name="popup_auth_expired_error_title">Whoops!</string>
    <string name="popup_auth_expired_error_body">Looks like you have been logged out (%s),
        you will now be returned to the login screen.\nGo ahead and give it another try after logging back in.</string>
    <string name="popup_auth_expired_no_error">No error provided</string>
    <string name="popup_auth_expired_button_title">Return to Login</string>

    <string name="popup_platform_title">Which platform\'s data would you like to use?</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bungie User Name</string>
    <string name="nav_header_subtitle">Bungie User About</string>
    <string name="nav_header_lastUpdate">Last Updated at %s</string>
    <string name="nav_header_firstAccess">Bungie user since %s</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_pursuits">Pursuits</string>
    <string name="pursuit_title_placeholder">Pursuit Title</string>
    <string name="pursuit_type_placeholder">Pursuit Type Placeholder</string>
    <string name="pursuitDescriptionPlaceholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Bibendum enim facilisis gravida neque convallis a cras. Commodo quis imperdiet massa tincidunt nunc pulvinar. Quis eleifend quam adipiscing vitae proin sagittis nisl rhoncus. Pretium quam vulputate dignissim suspendisse in est ante.</string>
    <string name="desc_feedback_icon">Feedback Icon</string>
    <string name="item_feedback_text">Submit Feedback</string>
    <string name="pursuit_reward_description">Pursuit Reward Description</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="pref_pursuits_header">Pursuits</string>

    <!-- Pursuits Preferences -->
    <string name="pref_pursuits_show_completed">Show Completed Pursuits</string>
    <string name="pref_pursuits_show_completed_summary_on">DOT will display Pursuits that have already been completed in-game.</string>
    <string name="pref_pursuits_show_completed_summary_off">DOT will not display Pursuits that have already been completed in-game.</string>
    <string name="pref_pursuits_show_zero_objectives">Show Pursuits with Zero Objectives</string>
    <string name="pref_pursuits_show_zero_objectives_summary_on">DOT will display Pursuits that have no actual objectives/tasks in-game.</string>
    <string name="pref_pursuits_show_zero_objectives_summary_off">DOT will not display Pursuits that have no actual objectives/tasks in-game.</string>
    <string name="pref_pursuits_show_armor_pursuits">Show Armor-based Pursuits</string>
    <string name="pref_pursuits_show_armor_pursuits_summary">Controls whether DOT will display Pursuits that are from your selected character\'s armor (such as Solstice of Heroes armor).</string>
<!--    <string name="pref_pursuits_show_armor_pursuits_summary_off">DOT will not display Pursuits that are from your selected character\'s armor (such as Solstice of Heroes armor).</string>-->

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_app_settings">DOT Settings</string>


</resources>