<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/landingWelcomeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/landing_welcome_text"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/landingText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/landingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/landing_text"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginBtn"
        android:layout_marginTop="11dp"
        android:text="@string/button_authorize_text"
        app:layout_constraintEnd_toEndOf="@+id/landingText"
        app:layout_constraintStart_toStartOf="@+id/landingText"
        app:layout_constraintTop_toBottomOf="@+id/landingText" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foreground="@drawable/raid_emblem"
        android:foregroundTint="#0E0000"
        android:src="@drawable/raid_emblem"
        android:tint="#030000"
        app:layout_constraintBottom_toTopOf="@+id/landingWelcomeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>