<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">

    <com.google.android.material.card.MaterialCardView
        style="@style/CardView.Dark"
        app:cardCornerRadius="10dp"
        android:elevation="5dp"
        app:cardElevation="5dp"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/pursuitHeader"
                android:background="@color/pursuit_legendary_background"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/objective_icon"
                        android:layout_margin="8dp"
                        android:layout_width="64dp"
                        android:layout_height="64dp"/>

                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                        <TextView
                            android:paddingTop="5dp"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:paddingBottom="5dp"
                            android:id="@+id/pursuitTitleText"
                            android:textColor="@color/primaryTextColor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/pursuit_title_placeholder"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title" />
                        <TextView
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:paddingBottom="10dp"
                            android:id="@+id/pursuitTypeText"
                            android:textColor="@color/primaryTextColor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/pursuit_type_placeholder"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:padding="15dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="@color/primaryTextColor"
                    android:id="@+id/pursuitDescriptionText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    tools:text="@string/pursuitDescriptionPlaceholder" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/objectivesHolder"
                    tools:itemCount="2"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="MissingConstraints" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rewardsHolder"
                    tools:itemCount="2"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/expiration_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#ff0000"
                    android:textStyle="bold"
                    tools:text="Expires in 24 hours" />

            </LinearLayout>



        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>